fixed alignment

--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -20,7 +20,7 @@
 }
 .message {
   grid-area: message;
-  padding-left: 50px;
+
   justify-self: center;
   font-size: 1.5em;
 }
